After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 686814 - Fix the startup ordering
Fix the startup ordering
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2012-10-24 17:20 UTC by Rui Matos
Modified: 2012-10-26 09:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Revert "main: Ensure session registration happens before other idles" (2.29 KB, patch)
2012-10-24 17:20 UTC, Rui Matos
committed Details | Review
main: Only start the manager after registering with gnome session (4.03 KB, patch)
2012-10-24 17:20 UTC, Rui Matos
committed Details | Review

Description Rui Matos 2012-10-24 17:20:31 UTC
Commit dcb54d8 makes us call RegisterClient before we could get to
Setenv.

I'm proposing that we revert it and then only start the settings
manager object in on_client_registered().

I'm not sure of one thing though. Should we terminate the daemon by
calling gtk_main_quit() in the error branch of on_client_registered()
and only start the manager in the non-error branch? Or does it make
sense to still start the manager in case the registration failed
(this is what's implemeted here) ?
Comment 1 Rui Matos 2012-10-24 17:20:33 UTC
Created attachment 227175 [details] [review]
Revert "main: Ensure session registration happens before other idles"

This reverts commit dcb54d8a1c4ecacf6fbe17bdffefdca3b1e6d2d5.
Comment 2 Rui Matos 2012-10-24 17:20:36 UTC
Created attachment 227176 [details] [review]
main: Only start the manager after registering with gnome session

This ensures that any idles will only run after RegisterClient but
also that we only call RegisterClient after Setenv as otherwise Setenv
isn't effective.
Comment 3 Bastien Nocera 2012-10-26 08:06:36 UTC
Review of attachment 227176 [details] [review]:

Fine by me.
Comment 4 Rui Matos 2012-10-26 09:40:30 UTC
Attachment 227175 [details] pushed as 1d4f68d - Revert "main: Ensure session registration happens before other idles"
Attachment 227176 [details] pushed as c38e155 - main: Only start the manager after registering with gnome session