main: Only start the manager after registering with gnome session

This ensures that any plugin idles will only run after RegisterClient
but also that we only call RegisterClient after Setenv since otherwise
Setenv isn't effective.

https://bugzilla.gnome.org/show_bug.cgi?id=686814